Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,5 +1,5 @@
 #summary Consolidated list/overview of wiki pages.
-#labels Featured,Phase-UserDocs
+#labels Featured,Phase-UserDocs,Topic-Project
 The one-stop v8-juice/v8-convert Table of Contents...
 
 <wiki:toc/>
@@ -42,8 +42,10 @@ v8-convert is a mid-2011 spinoff of v8-juice, providing a streamlined, header-on
   * [V8Convert Introduction/overview] of v8-convert's features.
   * [ChangeLog Summary of changes]
   * [Contributing] to v8-juice and v8-convert.
-  * How to [V8Convert_Overloading overload function bindings].
-  * [V8Convert_TipsAndTricks Tips and tricks].
+  * How to [V8Convert_FunctionBinding bind native function/methods] to JS.
+    * How to [V8Convert_Overloading overload function and constructor bindings].
+  * How to [V8Convert_PropertyBinding bind native non-function variables] to JS.
+  * Various [V8Convert_TipsAndTricks Tips, tricks, and how-tos].
   * Addons/plugins/demos:
     * Yet another [V8Convert_ClassCreator class-binding mechanism]
     * [V8Convert_ByteArray ByteArray class]
