--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -11,6 +11,10 @@ are at the top. Dates written extra large are release dates. This contains only 
 
 ----
 
+*2011 July 22*
+  * Completely refactored the cvv8 [V8Convert_PropertyBinding property binding API] to mimic the [V8Convert_FunctionBinding function binding API].
+  * Moved the MSVC support into the [V8Convert] trunk. Coen added project files for VS 2010. He suspects (but we haven't tested) that the code will work on VS 2008 as well.
+
 *2011 July 21*
   * Started a new mailing list: [http://groups.google.com/group/v8-juice-js-dev]
 
